# soccerbot

./: .gitconfig  .gitignore  .gitmodules  20161227152234-null-vs-null.rcg  20171017140446-null-vs-null.rcg  README.md  agentspark
soccer/src/control/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO.md  agentspark  cmake_install.cmake  main.cc  main.cpp  package.xml  start.sh  start_gazebo.sh  test.sh  test.skl  test.txt
soccer/src/control/behaviors/: README.md  naobehavior.cpp  testbehavior.cc  testbehavior.h
soccer/src/control/behaviours/: LearningBehaviour.cpp  behaviour.cpp  behaviour.h  naobehaviour.cpp  naobehaviour.h  test.skl
soccer/src/control/cmake/: FindRcssnet3d.cmake
soccer/src/control/headers/: Field.h  headers.cc  headers.cpp  headers.h
soccer/src/control/math/: Geometry.cpp  hctmatrix.cpp  hctmatrix.h  vecposition.cpp  vecposition.h
soccer/src/control/models/bodymodel/: bodymodel.cpp  bodymodel.h
soccer/src/control/models/worldmodel/: WorldObject.h  parser.cpp  parser.h  worldmodel.cpp  worldmodel.h
soccer/src/control/optimization/: Optimizer.cpp  Optimizer.h  optimizationbehaviours.cpp  optimizationbehaviours.h  optimizing.txt  sample_start_optimization.sh
soccer/src/control/particlefilter/: PFLocalization.h  Particle.h
soccer/src/control/skills/: README  README.md  curve3d.cpp  skill.cpp  skill.h  skillparser.h  stand.skl  test  test.skl  walk.skl  wave.skl
soccer/src/filtering/: CMakeLists.txt  package.xml
soccer/src/filtering/config/: soccerbot.cfg
soccer/src/filtering/launch/: filtering.launch  gazebo.launch
soccer/src/filtering/src/: team_updated_model.cpp
soccer/src/hardware_communication/: CMakeLists.txt  package.xml
soccer/src/hardware_communication/include/: robotgoal.h  robotstate.h  serial.h
soccer/src/hardware_communication/include/hardware_communication/: packet.h  robotgoal.h  robotstate.h  serial.h
soccer/src/hardware_communication/launch/: hardware_communication.launch
soccer/src/hardware_communication/msg/: RobotGoal.msg  RobotState.msg
soccer/src/hardware_communication/src/: hardware_communication.cpp  robotstate.cpp  serial.cpp
soccer/src/image_acquisition/: CMakeLists.txt  package.xml
soccer/src/image_acquisition/images/ball/: ball_session.mat
soccer/src/image_acquisition/images/game2/: 81_export.txt  imagetagger.sh
soccer/src/image_acquisition/launch/: camera_data.launch  image_acquisition.launch  image_acquisition_ball.launch  image_acquisition_field.launch  image_acquisition_field_test.launch  image_acquisition_game.launch  image_acquisition_net.launch  image_acquisition_robot.launch  image_acquisition_video.launch  image_proc_test.launch
soccer/src/image_acquisition/msg/: ColorSpace.msg  SoccerColorSpace.msg  colorspace.msg
soccer/src/image_acquisition/src/: estimate_colorspace.cpp  image_acquisition.cpp  image_acqusition.cpp  image_processing.cpp
soccer/src/image_acquisition/training_images/: DownloadStatus.xml
soccer/src/localization/: CMakeLists.txt  package.xml
soccer/src/localization/launch/: localization.launch
soccer/src/localization/src/: localization.cpp
soccer/src/object_recognition/: CMakeLists.txt  package.xml
soccer/src/object_recognition/include/: camera.hpp  vectormath.hpp  vectormath.hpp.orig
soccer/src/object_recognition/include/objects/: camera_object.hpp  camera_object_flann.hpp  field.hpp  net.hpp
soccer/src/object_recognition/include/pose_estimation/: Model.h  PnPProblem.h  Utils.h
soccer/src/object_recognition/include/statistics/: kde.hpp
soccer/src/object_recognition/launch/: ball_test.launch  object_detect_test.launch  object_recognition.launch  roi_test.launch  roi_test_video.launch  visual_odom.launch
soccer/src/object_recognition/matlab/: detect_balls.m  kde_test.m  kluster.m  reduce_images_in_folder.m
soccer/src/object_recognition/matlab/ImageNetToolbox/: XPathExecuteQuery.m  getResumeDownloadList.m  serverReleaseStatusToHash.m  verifyUserAccesskeyPair.m  wnidToDefinition.m
soccer/src/object_recognition/matlab/image_urls/: n04254680_url
soccer/src/object_recognition/msg/: FieldBoundary.msg  ROI.msg
soccer/src/object_recognition/src/: ball_ROI.cpp  ball_candidate_chooser.cpp  ball_detection.cpp  calibrate_camera.cpp  camera.cpp  camera_data.cpp  field_ROI.cpp  field_ROI.cpp.orig  game_GUI.cpp  game_ROI.cpp  goal_ROI.cpp  goal_detection.cpp  line_ROI.cpp  line_detection.cpp  obstacle_ROI.cpp  obstacle_detection.cpp  post_detection.cpp  vectormath.cpp  vectormath.cpp.orig  visual_compass.cpp  visual_odom.cpp
soccer/src/object_recognition/src/objects/: ball.cpp  player.cpp
soccer/src/object_recognition/src/old/: camera.cpp
soccer/src/object_recognition/src/pose_estimation/: CsvReader.cpp  CsvWriter.cpp  ModelRegistration.cpp  RobustMatcher.cpp
soccer/src/path_planning/: CMakeLists.txt  package.xml
soccer/src/path_planning/include/: constants.h  path.h
soccer/src/path_planning/launch/: path_planning.launch
soccer/src/path_planning/src/: path_execution.cpp  path_planning.cpp
soccer/src/pixel_to_position_transformation/: CMakeLists.txt  package.xml
soccer/src/pixel_to_position_transformation/configuration/: in_VID5.xml  out_camera_data.xml
soccer/src/pixel_to_position_transformation/include/: point_transform.hpp
soccer/src/pixel_to_position_transformation/launch/: calibrate_camera.launch  pixel_to_position_transformation.launch
soccer/src/pixel_to_position_transformation/meshes/: soccer_field.ply
soccer/src/pixel_to_position_transformation/src/: ball_position_transformation.cpp  calibrate_camera.cpp  goal_position_transformation.cpp  line_points_transformation.cpp  line_position_transformation.cpp  opponent_position_transformation.cpp  pixel_to_position_transformation.cpp  point_transform.cpp
soccer/src/robot_control/: CMakeLists.txt
soccer/src/robot_control/launch/: robot_control.launch  robot_test.launch
soccer/src/robot_control/msg/: WalkingPath.msg
soccer/src/robot_control/scripts/: pose_sender.py
soccer/src/robot_control/src/: path_execution.cpp  path_planning.cpp  path_test.cpp
(+1124 files in other folders)
