<?xml version="1.0"?>
<package format="2">
  <name>filtering</name>
  <version>0.0.0</version>
  <description>The filtering package</description>
  <maintainer email="nvidia@todo.todo">nvidia</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Important: export the model path to gazebo_ros gazebo -->
	<!-- gazebo_media_path, gazebo_model_path, plugin_path -->
  <export>      
 	<gazebo_ros gazebo_model_path="${prefix}/models/" />
	 <gazebo_ros gazebo_media_path="${prefix}" />
  </export>
</package>
